bug fixed: spacing in search box

--- a/frontend/src/_styles/queryManager.scss
+++ b/frontend/src/_styles/queryManager.scss
@@ -286,6 +286,7 @@ $border-radius: 4px;
                 line-height: 20px;
                 border: 0;
                 color: $color-light-slate-12;
+                padding-left: 8px !important;
                 &::placeholder{
                   color: $color-light-slate-09;
                 }
